--- a/Amazon_Reviews_Scrapper.ipynb
+++ b/Amazon_Reviews_Scrapper.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "92wxvlmORC2t"
    },
@@ -134,14 +134,13 @@
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "from time import sleep\n",
-    "\n",
-    "import pandas as pd # to write the data into CSV file using Dataframe"
+    "import time\n",
+    "import pandas as pd  # to write the data into CSV file using DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -159,8 +158,9 @@
     }
    ],
    "source": [
-    "from google.colab import drive # incase if you are working in google colab\n",
-    "drive.mount('/content/drive',force_remount=True)"
+    "# from google.colab import drive # incase if you are working in google colab\n",
+    "# drive.mount('/content/drive',force_remount=True)\n",
+    "# Not needed for local execution"
    ]
   },
   {
@@ -181,60 +181,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "id": "HM-rnI0DF9wF"
    },
    "outputs": [],
    "source": [
     "# In our case we have taken around 20 user agents and we are iterating through this user agents.\n",
-    "user_agents = ['Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.169 Safari/537.36'\n",
-    "'Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.121 Safari/537.36'\n",
-    "'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.157 Safari/537.36'\n",
-    "'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.113 Safari/537.36'\n",
-    "'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.110 Safari/537.36'\n",
-    "'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.45 Safari/537.36'\n",
-    "'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/97.0.4692.71 Safari/537.36'\n",
-    "'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/98.0.4758.102 Safari/537.36'\n",
-    "'Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.90 Safari/537.36'\n",
-    "'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/97.0.4692.99 Safari/537.36'\n",
-    "'Mozilla/5.0 (Windows NT 10.0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.121 Safari/537.36'\n",
-    "'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/95.0.4638.69 Safari/537.36'\n",
-    "'Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.169 Safari/537.36'\n",
-    "'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/99.0.4844.51 Safari/537.36'\n",
-    "'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.159 Safari/537.36'\n",
-    "'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.131 Safari/537.36'\n",
-    "'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/94.0.4606.81 Safari/537.36'\n",
-    "'Mozilla/5.0 (Windows NT 5.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/46.0.2490.71 Safari/537.36'\n",
-    "'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.88 Safari/537.36'\n",
-    "'Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.1 (KHTML, like Gecko) Chrome/21.0.1180.83 Safari/537.1']"
+    "user_agents = [\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.169 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.121 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.157 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.113 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.110 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.45 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/97.0.4692.71 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/98.0.4758.102 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.90 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/97.0.4692.99 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.121 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/95.0.4638.69 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.169 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/99.0.4844.51 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.159 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.131 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/94.0.4606.81 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 5.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/46.0.2490.71 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.88 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.1 (KHTML, like Gecko) Chrome/21.0.1180.83 Safari/537.1'\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "id": "USD1lNkXSx7c"
    },
    "outputs": [],
    "source": [
-    "cookie={} # insert request cookies within{}\n",
-    "# We are getting the reponse based on the search query\n",
+    "cookie = {}  # insert request cookies within{}\n",
+    "# We are getting the response based on the search query\n",
     "def getAmazonSearch(search_query):\n",
-    "    url=\"https://www.amazon.in/s?k=\"+search_query\n",
+    "    url = \"https://www.amazon.in/s?k=\" + search_query\n",
     "    for agent in user_agents:\n",
-    "      header={'User-Agent': agent}\n",
-    "      print(url)\n",
-    "      page=requests.get(url,cookies=cookie,headers=header)\n",
-    "      if page.status_code==200:\n",
-    "          return page\n",
-    "      else:\n",
-    "          continue"
+    "        header = {'User-Agent': agent}\n",
+    "        print(url)\n",
+    "        try:\n",
+    "            page = requests.get(url, cookies=cookie, headers=header)\n",
+    "            if page.status_code == 200:\n",
+    "                return page\n",
+    "        except Exception as e:\n",
+    "            print(f\"Request failed: {e}\")\n",
+    "        continue"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "id": "urws9oIBuGEL"
    },
@@ -242,21 +246,23 @@
    "source": [
     "# ASIN stands for Amazon Standard Identification Number. Almost every product on our site has its own ASIN--a unique code we use to identify it.\n",
     "def Searchasin(asin):\n",
-    "    url=\"https://www.amazon.in/dp/\"+asin\n",
+    "    url = \"https://www.amazon.in/dp/\" + asin\n",
     "    print(url)\n",
     "    for agent in user_agents:\n",
-    "      header={'User-Agent': agent}\n",
-    "      page=requests.get(url,cookies=cookie,headers=header)\n",
-    "      if page.status_code==200:\n",
-    "          return page\n",
-    "      else:\n",
-    "          continue\n",
+    "        header = {'User-Agent': agent}\n",
+    "        try:\n",
+    "            page = requests.get(url, cookies=cookie, headers=header)\n",
+    "            if page.status_code == 200:\n",
+    "                return page\n",
+    "        except Exception as e:\n",
+    "            print(f\"Request failed: {e}\")\n",
+    "        continue\n",
     "    return \"Error\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "id": "qkksYe9G7cP9"
    },
@@ -264,18 +270,23 @@
    "source": [
     "# Function to get the reviews based on the link we send\n",
     "def Searchreviews(review_link):\n",
-    "    url=\"https://www.amazon.in\"+review_link\n",
+    "    url = \"https://www.amazon.in\" + review_link\n",
     "    print(url)\n",
-    "    page=requests.get(url,cookies=cookie,headers=header)\n",
-    "    if page.status_code==200:\n",
-    "        return page\n",
-    "    else:\n",
-    "        return \"Error\""
+    "    for agent in user_agents:\n",
+    "        header = {'User-Agent': agent}\n",
+    "        try:\n",
+    "            page = requests.get(url, cookies=cookie, headers=header)\n",
+    "            if page.status_code == 200:\n",
+    "                return page\n",
+    "        except Exception as e:\n",
+    "            print(f\"Request failed: {e}\")\n",
+    "        continue\n",
+    "    return \"Error\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -305,17 +316,19 @@
     "        return\n",
     "\n",
     "\n",
-    "response=getAmazonSearch('iphone+all+mobiles')\n",
-    "soup=BeautifulSoup(response.content)\n",
+    "response = getAmazonSearch('iphone+all+mobiles')\n",
+    "soup = BeautifulSoup(response.content, \"html.parser\")\n",
     "urls = []\n",
     "while True:\n",
     "    url = getnextpage(soup)\n",
     "    if not url:\n",
     "        break\n",
     "    for agent in user_agents:\n",
-    "      header={'User-Agent': agent}\n",
-    "      response=requests.get(url,cookies=cookie,headers=header)\n",
-    "    soup=BeautifulSoup(response.content)\n",
+    "        header = {'User-Agent': agent}\n",
+    "        response = requests.get(url, cookies=cookie, headers=header)\n",
+    "        if response.status_code == 200:\n",
+    "            break\n",
+    "    soup = BeautifulSoup(response.content, \"html.parser\")\n",
     "    urls.append(url)"
    ]
   },
@@ -369,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "id": "1-irhHnFwr_U"
    },
@@ -378,10 +391,14 @@
     "# getting ASIN numbers for the products in the urls taken\n",
     "data_asin = []\n",
     "for url in urls:\n",
-    "  page=requests.get(url,cookies=cookie,headers=header)\n",
-    "  soup=BeautifulSoup(page.content)\n",
-    "  for i in soup.findAll(\"div\",{'class':\"s-result-item s-asin sg-col-0-of-12 sg-col-16-of-20 sg-col s-widget-spacing-small sg-col-12-of-16\"}):\n",
-    "    data_asin.append(i['data-asin'])"
+    "    for agent in user_agents:\n",
+    "        header = {'User-Agent': agent}\n",
+    "        page = requests.get(url, cookies=cookie, headers=header)\n",
+    "        if page.status_code == 200:\n",
+    "            break\n",
+    "    soup = BeautifulSoup(page.content, \"html.parser\")\n",
+    "    for i in soup.findAll(\"div\", {'class': \"s-result-item s-asin sg-col-0-of-12 sg-col-16-of-20 sg-col s-widget-spacing-small sg-col-12-of-16\"}):\n",
+    "        data_asin.append(i['data-asin'])"
    ]
   },
   {
@@ -411,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1010,8 +1027,8 @@
    ],
    "source": [
     "# In this code we are scraping the Products data and the link of the comments page of each product\n",
-    "link=[]\n",
-    "Product_title= []\n",
+    "link = []\n",
+    "Product_title = []\n",
     "Product_cost = []\n",
     "Product_rating = []\n",
     "Product_descrtipion = []\n",
@@ -1019,38 +1036,37 @@
     "Total_ratings = []\n",
     "print(len(data_asin))\n",
     "for i in range(len(data_asin)):\n",
-    "    response=Searchasin(data_asin[i])\n",
+    "    response = Searchasin(data_asin[i])\n",
     "    print(response)\n",
     "    if response == \"Error\":\n",
-    "      continue\n",
-    "    soup=BeautifulSoup(response.content)\n",
-    "    \n",
-    "    title = soup.find(\"span\",{\"class\":'a-size-large product-title-word-break'})\n",
-    "    if title == None:\n",
-    "      continue\n",
-    "    price = soup.find(\"span\",{\"class\":'a-offscreen'})\n",
-    "    if price == None:\n",
-    "      continue\n",
-    "    description_response = soup.find(\"ul\",{\"class\":'a-unordered-list a-vertical a-spacing-mini'}) #Here we search initally with the parent tag\n",
-    "    if description_response == None:\n",
-    "      continue\n",
+    "        continue\n",
+    "    soup = BeautifulSoup(response.content, \"html.parser\")\n",
+    "    title = soup.find(\"span\", {\"class\": 'a-size-large product-title-word-break'})\n",
+    "    if title is None:\n",
+    "        continue\n",
+    "    price = soup.find(\"span\", {\"class\": 'a-offscreen'})\n",
+    "    if price is None:\n",
+    "        continue\n",
+    "    description_response = soup.find(\"ul\", {\"class\": 'a-unordered-list a-vertical a-spacing-mini'})  # Here we search initially with the parent tag\n",
+    "    if description_response is None:\n",
+    "        continue\n",
     "    description = \"\"\n",
-    "    for desc in description_response.findAll(\"span\",{\"class\":'a-list-item'}): #from the response of parent tag we search the children\n",
-    "      description += desc.get_text().strip()+\"\\n\"\n",
+    "    for desc in description_response.findAll(\"span\", {\"class\": 'a-list-item'}):  # from the response of parent tag we search the children\n",
+    "        description += desc.get_text().strip() + \"\\n\"\n",
     "    if description == \"\":\n",
-    "      continue\n",
-    "    rating = soup.find(\"span\",{\"class\":'a-size-medium a-color-base'})\n",
-    "    if rating==None:\n",
-    "      continue\n",
-    "    total_rating_response = soup.find(\"div\",{\"class\":'a-row a-spacing-medium averageStarRatingNumerical'})\n",
-    "    if total_rating_response == None:\n",
-    "      continue\n",
-    "    total_rating = total_rating_response.find(\"span\",{\"class\":'a-size-base a-color-secondary'})\n",
-    "    if total_rating == None:\n",
-    "      continue\n",
-    "    h_ref = soup.find(\"a\",{'data-hook':\"see-all-reviews-link-foot\"})\n",
-    "    if h_ref == None:\n",
-    "      continue\n",
+    "        continue\n",
+    "    rating = soup.find(\"span\", {\"class\": 'a-size-medium a-color-base'})\n",
+    "    if rating is None:\n",
+    "        continue\n",
+    "    total_rating_response = soup.find(\"div\", {\"class\": 'a-row a-spacing-medium averageStarRatingNumerical'})\n",
+    "    if total_rating_response is None:\n",
+    "        continue\n",
+    "    total_rating = total_rating_response.find(\"span\", {\"class\": 'a-size-base a-color-secondary'})\n",
+    "    if total_rating is None:\n",
+    "        continue\n",
+    "    h_ref = soup.find(\"a\", {'data-hook': \"see-all-reviews-link-foot\"})\n",
+    "    if h_ref is None:\n",
+    "        continue\n",
     "    link.append(h_ref['href'])\n",
     "    updated_asin.append(data_asin[i])\n",
     "    Product_title.append(title.get_text().strip())\n",
@@ -1058,8 +1074,7 @@
     "    Product_rating.append(rating.get_text().strip().split()[0])\n",
     "    Total_ratings.append(total_rating.get_text().strip().split()[0])\n",
     "    Product_descrtipion.append(description)\n",
-    "    sleep(10)\n",
-    "    "
+    "    time.sleep(10)\n"
    ]
   },
   {
@@ -1153,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1859,7 +1874,7 @@
     }
    ],
    "source": [
-    "reviews_description=[]\n",
+    "reviews_description = []\n",
     "reviews_titles = []\n",
     "asin_reviews = []\n",
     "count = 0\n",
@@ -1867,20 +1882,21 @@
     "asin = df['ASIN']\n",
     "link = df['Links']\n",
     "for j in range(len(link)):\n",
-    "    print(\"Processing reviews for Product\",j)\n",
+    "    print(\"Processing reviews for Product\", j)\n",
     "    for k in range(10):\n",
-    "      response=Searchreviews(link[j]+'&pageNumber='+str(k))\n",
-    "      soup=BeautifulSoup(response.content)\n",
-    "      if not soup.find(\"li\",{'class':\"a-disabled a-last\"}):\n",
-    "        \n",
-    "        for i in soup.findAll(\"span\",{'data-hook':\"review-body\"}):\n",
-    "            reviews_description.append(i.text)\n",
-    "            asin_reviews.append(asin[j])\n",
-    "        for i in soup.findAll(\"a\",{'data-hook':\"review-title\"}):\n",
-    "            reviews_titles.append(i.text)\n",
-    "      else:\n",
-    "        break\n",
-    "      sleep(5)"
+    "        response = Searchreviews(link[j] + '&pageNumber=' + str(k))\n",
+    "        if response == \"Error\":\n",
+    "            continue\n",
+    "        soup = BeautifulSoup(response.content, \"html.parser\")\n",
+    "        if not soup.find(\"li\", {'class': \"a-disabled a-last\"}):\n",
+    "            for i in soup.findAll(\"span\", {'data-hook': \"review-body\"}):\n",
+    "                reviews_description.append(i.text)\n",
+    "                asin_reviews.append(asin[j])\n",
+    "            for i in soup.findAll(\"a\", {'data-hook': \"review-title\"}):\n",
+    "                reviews_titles.append(i.text)\n",
+    "        else:\n",
+    "            break\n",
+    "        time.sleep(5)"
    ]
   },
   {
